API call function for different category working!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <label for="bookForm">What do you want to read?</label>
             <select name="bookCategory" id="bookCategory">
                 <option value="fantasy">Fantasy</option>
-                <option value="horror">Horro</option>
+                <option value="horror">Horror</option>
                 <option value="romance">Romance</option>
                 <option value="sciFi">Science-fiction</option>
                 <option value="humor">Humor</option>
