added display function

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <option value="fantasy">Fantasy</option>
                 <option value="horror">Horror</option>
                 <option value="romance">Romance</option>
-                <option value="sciFi">Science-fiction</option>
+                <option value="science_fiction">Science-fiction</option>
                 <option value="humor">Humor</option>
             </select>
             <button>Submit</button>
