done popup modal and some styling :party:

--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>My Little Library</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Poppins&display=swap" rel="stylesheet">
+
+    <title>Pocket Books</title>
 </head>
 
 <body>
-    <header>
-        <h1>Pocket Books</h1>
+    <header class="wrapper">
+      <div class="logo">
+        <img src="./assets/bookgif.gif" alt="animated book pages">
+      </div>
+      <p>Welcome to..</p>  
+      <h1>Pocket Books</h1>
+      <p>Made possible by openlibrary.org </p>
     </header> <!-- end of header-->
     
-    <main>
+    <main class ="wrapper">
       <div class="modalBackground">
         <div class="modalContent">
           <span id="closeModalButton">&times</span>
@@ -45,7 +54,7 @@
         </section>
     </main> <!-- end of main-->
 
-    <footer>
+    <footer class ="wrapper">
         <p>Created at <a href="junocollege.com">Juno College</a></p>
     </footer> <!-- end of footer-->
 
