added icon for modal close

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="modalBackground">
           <div class="modalContent">
-            <span id="closeModalButton">&times</span>
+            <span id="closeModalButton"><img src="./assets/times.svg" alt=""></span>
             <p class="modalText"></p>
           </div> <!-- end of modal Background-->
         </div> <!-- end of Modal Background-->
