added info menu and some styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <div class="logo">
           <img src="./assets/bookgif.gif" alt="animated book pages">
         </div>
-        <div class="infoMenu">
+        <img class="infoIcon" src="./assets/icons8-info.svg" alt="">
+        <div class="infoMenu hide">
+          <span class="closeInfoMenu"><img class="modalIcon" src="./assets/times.svg" alt="an X icon"></span>
           <p>Created by Elisabeth Winter & Azalia Loeciano</p>
           <p>Background<a href="https://www.vecteezy.com/free-vector/grunge"> Grunge Vectors by Vecteezy</a></p>
           <p>API by <a href="https://openlibrary.org/"> The Open Library</a></p>
@@ -35,7 +37,7 @@
 
         <div class="modalBackground">
           <div class="modalContent">
-            <span id="closeModalButton"><img class="modalIcon" src="./assets/times.svg" alt=""></span>
+            <span class="closeModalButton"><img class="modalIcon" src="./assets/times.svg" alt="an X icon"></span>
             <p class="modalText"></p>
           </div> <!-- end of modal Background-->
         </div> <!-- end of Modal Background-->
