finish modal ft. merge ready

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div> <!-- end of InfoMenu-->
         <p class="welcome">Welcome to..</p>  
         <h1>Pocket Books</h1>
-        <p class="attribution">Made possible by openlibrary.org </p>
+        <p>Made Possible by <a href="https://openlibrary.org/">The Open Library</a></p>
       </div> <!-- end of header container-->
     </header> <!-- end of header-->
     
